Fix .forkbomb flow on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -556,13 +556,13 @@ article p:first-of-type
 
 @media all and (max-width: 1000px)
 {
-  .content
-  {
-    float: left;
-    width: 100%;
-    max-width: none;
-    margin-left: 0;
-  }
+    .content
+    {
+      float: left;
+      width: 100%;
+      max-width: none;
+      margin-left: 0;
+    }
 
     body, html
     {
@@ -574,10 +574,10 @@ article p:first-of-type
         line-height: 1.25;
     }
 
-    img.medium-sized
+    img.medium-sized, .forkbomb
     {
-        margin-bottom: 31.5px;
-        margin-bottom: 1.96875rem;
+        margin-bottom: 18px;
+        margin-bottom: 1rem;
     }
 
 }
